MapSelectionMenu Tests